# browser_agent_experiment

./: .env.example  .gitignore  README.md  pyproject.toml
json_data_from_network_layer/: bestselling_topic_data.docx  business_topic_data.docx  design_topic_data.docx  development_topic_data.docx  personal_development_topic_data.docx
udemy_agent/: __init__.py  __main__.py  cli.py  exceptions.py
udemy_agent/config/: __init__.py  settings.py
udemy_agent/core/: __init__.py  agent.py
udemy_agent/data/: __init__.py  knowledge_base.py
udemy_agent/models/: __init__.py  filters.py  state.py
udemy_agent/prompts/: __init__.py  templates.py
udemy_agent/services/: __init__.py  browser_service.py  llm_service.py
udemy_data/: personal_development_topics.csv  topic_index.json  udemy_topics_from_network.csv
udemy_data/analysis/: Bestselling_Plus_PD_Combined_Analysis.md  Personal_Development_Only_Analysis.md  pd_course_analysis.py  udemy_courses_eda.ipynb  udemy_courses_unique.csv
udemy_gpt/: __init__.py  __main__.py  cli.py  exceptions.py
udemy_gpt/config/: __init__.py  settings.py
udemy_gpt/core/: __init__.py  agent.py
udemy_gpt/data/: __init__.py  repository.py  topic_index.py
udemy_gpt/models/: __init__.py  course.py  intent.py  state.py
udemy_gpt/prompts/: __init__.py  loader.py
udemy_gpt/services/: __init__.py  browser_service.py  course_service.py  intent_service.py  llm_service.py
udemy_gpt/utils/: __init__.py  formatters.py  parsers.py
udemy_scraper/: __init__.py  __main__.py  cli.py  exceptions.py
udemy_scraper/config/: __init__.py  (+1 more)
(+207 files in other folders)
