[project]
name = "browser-agent-experiment"
version = "1.0.0"
description = "Browser automation experiments for Udemy course discovery and scraping"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "langchain-openai>=0.1.0",
    "langsmith>=0.1.0",
    "langgraph>=0.2.0",
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.0",
    "nest-asyncio>=1.6.0",
]

[project.scripts]
udemy-scraper = "udemy_scraper.cli:main"
udemy-gpt = "udemy_gpt.cli:main"
udemy-agent = "udemy_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["udemy_gpt", "udemy_scraper", "udemy_agent"]

[dependency-groups]
dev = []
